--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ python-dotenv==0.17.1
 javascript==1!0.2.16
 profanity-filter==1.3.3
 spacy==2.3.7
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
